--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   http: ^1.2.2
   image_picker: ^1.1.2
   flutter_hooks: ^0.21.3+1
   flutter_image_compress: ^2.3.0
-
+  qr_flutter: ^4.1.0
+  url_launcher: ^6.2.6
+  animated_text_kit: ^4.2.2
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # Latest stable lints for Dart 3 & Flutter 3
+  flutter_launcher_icons: ^0.14.4
   flutter_lints: ^6.0.0
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/tree_logo.png
+    - assets/sankalptaru_logo.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  adaptive_icon_foreground: "assets/logo.png"
